[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini"
version = "0.1.1"
description = "An async and static-typed library for working with Gemini."
readme = "README.md"
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "msgspec>=0.19.0",
]
